--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/component-compiler-utils": "^1.3.1",
     "node-sass": "^4.9.0",
     "parcel-bundler": "^1.8.1",
+    "sass-lint": "^1.12.1",
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
