--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "open-color": "^1.6.3",
     "sass-mq": "^4.0.2",
     "vue": "^2.5.16",
     "vue-hot-reload-api": "^2.3.0"
