--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -19,10 +19,7 @@ rules:
   class-name-format:
     - 1
     - convention: strictbem
-  clean-import-paths:
-    - 1
-    - filename-extension: false
-      leading-underscore: false
+  clean-import-paths: 0
   empty-line-between-blocks:
     - 0
     - ignore-single-line-rulesets: true
